# realworldhaskell

./: realworldhaskell.cabal  stack.yaml  webscraperhs.cabal  webscraperhs.cabal~
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/flag-cache/: HTTP-4000.3.3-ff8967caa58688f89d51eb625bd0bb21  HUnit-1.3.1.2-2970a5747f0fc49db1e2d936fbb2295d  hxt-9.3.1.15-5dfd1ef171ef9beedcab4d265d7fdea9  hxt-charproperties-9.2.0.1-77fe045e8800c23e8f83f796f77dd37a  hxt-regex-xmlschema-9.2.0.2-055f7bdf2a07b4548b5a8271a886b85e  hxt-unicode-9.0.2.4-04580cbdb48d303817480202f5672246  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-2.6.3.1-b6098606810f80d9c175c76a32211112  network-uri-2.6.1.0-bfcba21744811a92e518fe61761cdc58  parsec-3.1.11-33fe1266e8e97076d8f3218fa382d94c  text-1.2.2.1-7d0e2ea4f6c20c86065fc9fde58d97e6  url-2.1.3-f624059d34a8d4bca0831ae5eef6dfcb  utf8-string-1.0.1.1-d4ff7be1a0ccd2257ed767fbfc920f6a  webscraperhs-0.1.0.0-a22600eedbe9c26fd8db1afbbf9da379  webscraperhs-0.1.0.0-b5ff464a03cc7be36294fd90f0433077
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/webscraperhs-0.1.0.0-HZcvIajtoNAHnLcsGry7W3/: Lib.hi
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/webscraperhs-0.1.0.0-KDIioo8bBRN5iqJ6rYlngd/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-6.16/7.10.3/pkgdb/: package.cache  webscraperhs-0.1.0.0-a22600eedbe9c26fd8db1afbbf9da379.conf
src/FindFile/: #BetterPredicate.hs#  .#BetterPredicate.hs  BetterPredicate.hs  ControlledVisit.hs  RecursiveContents.hs  SimpleFinder.hs
