name:                realworldhaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/realworldhaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Chenyu Lu
maintainer:          luchenyuxx@gmail.com
copyright:           2016 Chenyu Lu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath                                          
  default-language:    Haskell2010

executable realworldhaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , realworldhaskell
  default-language:    Haskell2010

test-suite realworldhaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , realworldhaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/realworldhaskell
